added status pages
